--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,9 +27,7 @@ deployable-branches-and-tags: &deployable-branches-and-tags
     tags:
       only: /[0-9]+(?:\.[0-9]+){2,}-palantir\.[0-9]+(?:\.[0-9]+)*/
     branches:
-      only:
-       - master
-       - wr/caching
+      only: master
 
 
 # Step templates
@@ -308,7 +306,7 @@ jobs:
       - run:
           name: Run all tests
           command: ./dev/run-scala-tests.py | tee -a "/tmp/run-scala-tests.log"
-          no_output_timeout: 30m
+          no_output_timeout: 20m
       - store_artifacts:
           path: /tmp/run-scala-tests.log
           destination: run-scala-tests.log
