--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -169,6 +169,19 @@ jobs:
       #- save_cache:
       #    key: build-maven-{{ .Branch }}-{{ .BuildNum }}
       #    paths: .
+  build-spark-docker-gradle-plugin:
+    <<: *defaults
+    steps:
+      - *checkout-code
+      - *restore-gradle-wrapper-cache
+      - *restore-gradle-cache
+      - run: ./gradlew --info --stacktrace check -x test
+      - save_cache:
+          key: 'gradle-wrapper-v2-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}'
+          paths: [ ~/.gradle/wrapper ]
+      - save_cache:
+          key: 'gradle-cache-v2-{{ checksum "versions.props" }}-{{ checksum "build.gradle" }}'
+          paths: [ ~/.gradle/caches ]
 
   run-style-tests:
     # depends only on build-maven
@@ -257,6 +270,16 @@ jobs:
             - 'assembly/target/scala-*/jars'
             - 'examples/target/scala-*/jars'
             - 'external/*/target/scala-*/*.jar'
+
+  run-spark-docker-gradle-plugin-tests:
+    <<: *test-defaults
+    resource_class: medium
+    steps:
+      - *checkout-code
+      - *restore-gradle-wrapper-cache
+      - *restore-gradle-cache
+      - setup_remote_docker: { docker_layer_caching: true }
+      - run: ./gradlew --info --parallel --continue --stacktrace test
 
   run-backcompat-tests:
     # depends on build-sbt
@@ -416,6 +439,17 @@ jobs:
           key: v1-maven-dependency-cache-versioned-{{ checksum "pom.xml" }}
           paths: ~/.m2
 
+  deploy-gradle:
+    <<: *defaults
+    docker:
+      - image: palantirtechnologies/circle-spark-r:0.2.4
+    steps:
+      - *checkout-code
+      - *restore-gradle-wrapper-cache
+      - *restore-gradle-cache
+      - deploy:
+          command: ./gradlew --parallel --continue --stacktrace --no-daemon bintrayUpload
+
   deploy:
     <<: *defaults
     # Some part of the maven setup fails if there's no R, so we need to use the R image here
@@ -459,6 +493,8 @@ workflows:
           <<: *all-branches-and-tags
       - build-sbt:
           <<: *all-branches-and-tags
+      - build-spark-docker-gradle-plugin:
+          <<: *all-branches-and-tags
       - run-backcompat-tests:
           requires:
             - build-sbt
@@ -466,6 +502,10 @@ workflows:
       - run-scala-tests:
           requires:
             - build-sbt
+          <<: *all-branches-and-tags
+      - run-spark-docker-gradle-plugin-tests:
+          requires:
+            - build-spark-docker-gradle-plugin
           <<: *all-branches-and-tags
       - run-python-tests:
           requires:
@@ -475,6 +515,10 @@ workflows:
           requires:
             - build-maven
           <<: *all-branches-and-tags
+      - deploy-gradle:
+          requires:
+            - run-spark-docker-gradle-plugin-tests
+          <<: *deployable-branches-and-tags
       - deploy:
           requires:
             - build-maven
