--- a/spark-docker-image-generator/src/test/resources/plugin-test-project/build.gradle
+++ b/spark-docker-image-generator/src/test/resources/plugin-test-project/build.gradle
@@ -18,29 +18,35 @@
 buildscript {
   repositories {
     jcenter()
-    gradlePluginPortal()
     maven { url "http://palantir.bintray.com/releases" }
-  }
-
-  dependencies {
-      classpath 'com.netflix.nebula:gradle-info-plugin:7.1.3'
-    classpath 'com.palantir.baseline:gradle-baseline-java:2.28.3'
-    classpath 'com.palantir.gradle.gitversion:gradle-git-version:0.12.3'
-    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
-    classpath 'com.netflix.nebula:nebula-publishing-plugin:17.2.1'
   }
 }
 
-apply plugin: 'com.palantir.baseline'
-apply plugin: 'com.palantir.git-version'
+plugins {
+  id 'org.apache.spark.deploy.kubernetes.docker.gradle'
+}
 
-allprojects {
-  group 'org.apache.spark'
-  version System.env.CIRCLE_TAG ?: gitVersion()
-  buildDir = 'gradle-build'
+repositories {
+  jcenter()
+  maven { url "http://palantir.bintray.com/releases" }
+  maven { url System.env.MAVEN_REPO }
+}
 
-  repositories {
-    jcenter()
-    maven { url "http://palantir.bintray.com/releases" }
-  }
+apply plugin: 'java'
+version System.getProperty("test-project-version")
+group 'org.apache.spark'
+sourceCompatibility = 1.8
+
+dependencies {
+  compile 'com.google.guava:guava:21.0'
+  compile 'org.apache.commons:commons-compress:1.18'
+  sparkDockerRuntime 'commons-io:commons-io:2.4'
+}
+
+sparkDocker {
+  baseImage 'openjdk:8-jdk-slim'
+  imagePath 'spark/spark-test-app'
+  snapshotRegistry 'docker.palantir.test.snapshot'
+  releaseRegistry 'docker.palantir.test.release'
+  tags System.getProperty('docker-tag')
 }
