--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,8 +30,9 @@ deployable-branches-and-tags: &deployable-branches-and-tags
     tags:
       only: /[0-9]+(?:\.[0-9]+){2,}-palantir\.[0-9]+(?:\.[0-9]+)*/
     branches:
-      only: master
-
+      only:
+        - /palantir-.*/
+        - master
 
 # Step templates
 
