--- a/pom.xml
+++ b/pom.xml
@@ -199,8 +199,11 @@
     <antlr4.version>4.7.1</antlr4.version>
     <jpam.version>1.1</jpam.version>
     <selenium.version>2.52.0</selenium.version>
-    <htmlunit.version>2.40.0</htmlunit.version>
-    <maven-antrun.version>1.8</maven-antrun.version>
+    <htmlunit.version>2.22</htmlunit.version>
+    <!--
+    Managed up from older version from Avro; sync with jackson-module-paranamer dependency version
+    -->
+    <paranamer.version>2.8</paranamer.version>    <maven-antrun.version>1.8</maven-antrun.version>
     <commons-crypto.version>1.1.0</commons-crypto.version>
     <!--
     If you are changing Arrow version specification, please check ./python/pyspark/sql/utils.py,
